Revert "Fix toolbar icon-only button vertical alignment"
This reverts commit d93145de4222d7c1944b38531de84e8df2accc4a.

--- a/inst/components/scss/toolbar.scss
+++ b/inst/components/scss/toolbar.scss
@@ -72,11 +72,9 @@
     aspect-ratio: 1;
     line-height: 1 !important; // Ensure no line-height interference
 
-    // Remove padding and margin on hidden label to keep icon centered
-    // The margin-left override is needed to counteract shiny's .action-button .action-icon+.action-label rule
+    // Remove padding on hidden label to keep icon centered
     .action-label {
       padding-left: 0;
-      margin-left: 0 !important;
     }
 
     // Ensure icon is centered
